[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Dark.gd" type="Script" id=2]
[ext_resource path="res://Assets/units/mob/goblin.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 22 )

[node name="Ork" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 33, 38 )
shape = SubResource( 1 )

[node name="HP_bar" parent="." index="2"]
margin_left = 7.0
margin_top = -7.0
margin_right = 57.0
margin_bottom = -2.0
max_value = 250.0
value = 250.0

[node name="StandingTimer" type="Timer" parent="." index="3"]

[node name="DamagePos" type="Position2D" parent="." index="4"]
visible = false

[node name="Timer" type="Timer" parent="." index="5"]

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
